--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
   <p>
     Контент страницы про GitHub
   </p>
+  <a href="pages/about.html">
+    Перейти на следующую страницу
+  </a>
 </body>
 </html>
