--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-  <title>Курс про GitHub</title>
+  <title>Практикуемся с Git</title>
 </head>
 <body>
   <h1>Главная страница</h1>
